--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <audio autoplay controls loop >
         <source src="music/audi.mp3" type="audio/mpeg"/>
         </audio>
-        
+     <h1>Camachopong</h1>
+    <h2>controles</h2>
+    <p>jugador azul: <span>W</span>  =arriba <span>S</span> =abajo</p><br>
+    <p>jugador rosa: <span>Flecha_ARRIBA</span>  = arriba <span>Flecha_ABAJO</span> = abajo</p>    
 </body>
 </html>
